@@ -7,6 +7,10 @@ Revision history for DBIx::Class
           path across multiple versions (jgoulah)
         - Better (and marginally faster) implementation of the HashRefInflator
           hash construction algorithm
+        - Added the ability to instantiate HashRefInflator so options can be 
+          passed to the constructor
+        - Additional recursive function to optionally inflate any inflatable
+          values in the hashref generated by HashRefInflator
         - Allow explicit specification of ON DELETE/ON UPDATE constraints
           when using the SQLT parser
 
